assignment 2 initial commit

--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -33,11 +33,11 @@
       </form>
       <div class="finalArrayWrapper">
         <div class="arrayTitle">Final Array:</div>
-        <div id="finalArray">[ ]</div>
+        <div class="finalOutputs" id="finalArray">[ ]</div>
       </div>
       <div class="duplicateArrayWrapper">
-        <div class="arrayTitle">Duplicate Elemetns:</div>
-        <div id="duplicateElements">[ ]</div>
+        <div class="arrayTitle">Duplicate Elements(skipped):</div>
+        <div class="finalOutputs" id="duplicateElements">[ ]</div>
       </div>
       <button class="resetBtn" onclick="resetArray()">Reset List</button>
     </div>
